Update security configs